almost done with integration, missing Agent implementation